--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Componente de Aulas</title>
+    <title>Reserva de Armário</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <aulas-component id="componente"></aulas-component>
-    
-    <script src="script_componente.js"></script>
+    <div class="container">
+        <h2>Reserva de Armário</h2>
+        <label for="tipoArmario">Selecione o tipo de armário:</label>
+        <select id="tipoArmario">
+            <option value="padrao">Padrão</option>
+            <option value="duplo">Duplo</option>
+        </select>
+        <button onclick="reservarArmario()">Reservar</button>
+        <p id="resultado"></p>
+    </div>
 </body>
 </html>
