--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva de Armário</title>
-    <link rel="stylesheet" href="styles.css">
+  <title> Dashboard App Inatel </title>
 </head>
 <body>
-    <div class="container">
-        <h2>Reserva de Armário</h2>
-        <label for="tipoArmario">Selecione o tipo de armário:</label>
-        <select id="tipoArmario">
-            <option value="padrao">Padrão</option>
-            <option value="duplo">Duplo</option>
-        </select>
-        <button onclick="reservarArmario()">Reservar</button>
-        <p id="resultado"></p>
+  <header id="head">
+    <div id="menu">ICONE</div>
+    <div id="perfil">ICONE</div>
+  </header>
+  <main>
+    <div id="mensagens">
+      <div id="user_name">Olá Raphael!</div>
+      <div id="mns_box">
+        <div id="icon">ICONE</div>
+        <div id="mns">Você possui um armário reservado com entrega para hoje...</div>
+      </div>
+      <div id="mns_box">
+        <div id="icon">ICONE</div>
+        <div id="mns">Você possui uma pendência no financeiro...</div>
+      </div>
     </div>
+    </div>
+  </main>
 </body>
 </html>
